--- a/.env.docker
+++ b/.env.docker
@@ -13,7 +13,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
-REDIS_URI=redis://localhost:6379
+REDIS_URI=redis://redis:6379
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -30,7 +30,7 @@ CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:Passw0rd@127.0.0.1:3306/database
+DATABASE_URL=mysql://root:Passw0rd@mysql:3306/database
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
@@ -40,5 +40,5 @@ JWT_PASSPHRASE=76878e968d150eeb23d5579675c9f194
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/messenger ###
-MESSENGER_TRANSPORT_DSN=amqp://user:password@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=amqp://user:password@rabbitmq:5672/%2f/messages
 ###< symfony/messenger ###
