--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,15 +1,18 @@
+parameters:
+    env(REDIS_URI): ''
+
 framework:
     cache:
         # Put the unique name of your app here: the prefix seed
         # is used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+        prefix_seed: k911/inz-app
 
         # The app cache caches to the filesystem by default.
         # Other options include:
 
         # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
+        app: cache.adapter.redis
+        default_redis_provider: '%env(REDIS_URI)%'
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
