--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,7 +7,8 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: ~
+        handler_id: 'app.redis.session_handler'
+        storage_id: session.storage.php_bridge
         cookie_secure: auto
         cookie_samesite: lax
 
