--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Finial Inz App",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
@@ -19,6 +19,7 @@
         "symfony/messenger": "4.2.*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/yaml": "4.2.*",
@@ -70,6 +71,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.2.*",
         "symfony/maker-bundle": "^1.11"
