--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,3 +1,29 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+
+    formats:
+        json:
+            mime_types: ['application/json']
+        jsonld:
+            mime_types: ['application/ld+json']
+        jsonapi:
+            mime_types: ['application/vnd.api+json']
+        xml:
+            mime_types: ['application/xml', 'text/xml']
+        html:
+            mime_types: ['text/html']
+
+    error_formats:
+        jsonproblem:
+            mime_types: ['application/problem+json']
+        jsonld:
+            mime_types: ['application/ld+json']
+        jsonapi:
+            mime_types: ['application/vnd.api+json']
+
+    # Enable Swagger UI authorization.
+    swagger:
+        api_keys:
+            - { name: 'authorization', type: 'header' }
+            - { name: 'token', type: 'query' }
