--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,11 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
+#api_user_create:
+#    controller:
+#    path: /api/users
+#    methods: ['POST']
+
 api_login_check:
     path: /api/token
     methods: ['POST']
