--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
+        "beberlei/assert": "^3.2",
         "k911/swoole-bundle": "^0.4.2",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "phpstan/phpstan-beberlei-assert": "^0.10.0",
         "predis/predis": "^1.1",
         "ramsey/uuid": "^3.8",
         "ramsey/uuid-doctrine": "^1.5",
