--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,9 +1,21 @@
 framework:
     messenger:
         transports:
-            # Uncomment the following line to enable a transport named "amqp"
-            # amqp: '%env(MESSENGER_TRANSPORT_DSN)%'
+             amqp: '%env(MESSENGER_TRANSPORT_DSN)%'
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': amqp
+             '*': amqp
+
+        default_bus: messenger.bus.commands
+        buses:
+            messenger.bus.commands:
+                middleware:
+                    - validation
+                    - doctrine_transaction
+            messenger.bus.queries:
+                middleware:
+                    - validation
+            messenger.bus.events:
+                default_middleware: allow_no_handlers
+                middleware:
+                    - validation
