--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,18 +5,21 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
+        bind:
+#            $commandBus: '@messenger.bus.commands'
+#            $queryBus: '@messenger.bus.queries'
+#            $eventBus: '@messenger.bus.events'
 
     App\:
         resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
+        exclude: '../src/{DependencyInjection,Domain,Migrations,Tests,Kernel.php}'
 
     App\Application\Action\:
         resource: '../src/Application/Action'
         tags: ['controller.service_arguments']
+
+    App\Domain\User\UserRepositoryInterface:
+        class: App\Infrastructure\ORM\Repository\UserRepository
 
     app.redis.session_handler:
         class: Symfony\Component\HttpFoundation\Session\Storage\Handler\RedisSessionHandler
