feat(user): Make CreateUserCommand work

--- a/config/packages/api_platform_resources/user.yaml
+++ b/config/packages/api_platform_resources/user.yaml
@@ -1,4 +1,4 @@
-App\Application\Projection\UserProjection:
+App\Application\Document\UserDocument:
   shortName: User
   attributes:
     normalization_context:
