--- a/config/packages/api_platform_resources/user.yaml
+++ b/config/packages/api_platform_resources/user.yaml
@@ -9,7 +9,9 @@ App\Application\Document\UserDocument:
     post:
       method: POST
       controller: App\Application\Action\CreateUserAction
+      access_control: "is_granted('ROLE_ADMIN')"
   itemOperations:
     get:
       method: GET
       controller: App\Application\Action\GetUserAction
+      access_control: "is_granted('ROLE_ADMIN') or (user and object.isGranted(user))"
