feat(user): Prepare Chage User password endpoint

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -11,10 +11,9 @@ framework:
             messenger.bus.commands:
                 middleware:
                     - validation
-                    - doctrine_transaction
-            messenger.bus.queries:
-                middleware:
-                    - validation
+#            messenger.bus.queries:
+#                middleware:
+#                    - validation
             messenger.bus.events:
                 default_middleware: allow_no_handlers
                 middleware:
