--- a/config/packages/api_platform_resources/user.yaml
+++ b/config/packages/api_platform_resources/user.yaml
@@ -15,3 +15,19 @@ App\Application\Document\UserDocument:
       method: GET
       controller: App\Application\Action\GetUserAction
       access_control: "is_granted('ROLE_ADMIN') or (user and object.isGranted(user))"
+
+App\Application\Document\UserChangePasswordDocument:
+  shortName: User
+  attributes:
+    iri: api_users_get_item
+    normalization_context:
+      groups: ['UserChangePasswordRead']
+    denormalization_context:
+      groups: ['UserChangePasswordWrite']
+  collectionOperations: []
+  itemOperations:
+    change_password:
+      method: POST
+      path: '/users/{id}/change-password'
+      controller: App\Application\Action\ChangeUserPasswordAction
+      access_control: "is_granted('ROLE_ADMIN') or (user and object.isGranted(user))"
