feat(user): Configure change user password endpoint

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -24,6 +24,9 @@ api_platform:
         jsonapi:
             mime_types: ['application/vnd.api+json']
 
+    exception_to_status:
+        Assert\InvalidArgumentException: 400
+
     # Enable Swagger UI authorization.
     swagger:
         api_keys:
