--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -9,11 +9,9 @@ framework:
         default_bus: messenger.bus.commands
         buses:
             messenger.bus.commands:
+                default_middleware: allow_no_handlers
                 middleware:
                     - validation
-#            messenger.bus.queries:
-#                middleware:
-#                    - validation
             messenger.bus.events:
                 default_middleware: allow_no_handlers
                 middleware:
