--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,8 @@ security:
     encoders:
         App\Domain\User\User:
             algorithm: argon2i
+        App\Application\Document\UserDocument:
+            algorithm: argon2i
 
     providers:
         app_user_provider:
