--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -2,6 +2,7 @@ api_platform:
     mapping:
         paths:
             - '%kernel.project_dir%/src/Application/Document'
+            - '%kernel.project_dir%/src/Domain/User'
             - '%kernel.project_dir%/config/packages/api_platform_resources'
 
     formats:
@@ -23,6 +24,8 @@ api_platform:
             mime_types: ['application/ld+json']
         jsonapi:
             mime_types: ['application/vnd.api+json']
+
+    path_segment_name_generator: api_platform.path_segment_name_generator.dash
 
     exception_to_status:
         Assert\InvalidArgumentException: 400
