--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/console": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/mercure-bundle": "^0.1.0",
         "symfony/messenger": "4.2.*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
