--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ services:
     ports:
       - "80:8080"
 
+  mercure:
+    image: dunglas/mercure
+    environment:
+      DEMO: 1
+      ADDR: ':3333'
+      ALLOW_ANONYMOUS: 1
+      JWT_KEY: '!UnsecureChangeMe!'
+      CORS_ALLOWED_ORIGINS: '*'
+      PUBLISH_ALLOWED_ORIGINS: http://localhost:3333,http://localhost:9501,http://api:8080
+    ports:
+      - "3333:3333"
+
   console:
     image: app-console:local
     build:
