--- a/config/packages/api_platform_resources/user.yaml
+++ b/config/packages/api_platform_resources/user.yaml
@@ -45,6 +45,22 @@ App\Application\Document\UserDocument:
       access_control: "is_granted('ROLE_ADMIN')"
   itemOperations: []
 
+App\Application\Document\UserChangeEmailDocument:
+  shortName: User
+  attributes:
+    iri: api_users_get_item
+    normalization_context:
+      groups: ['UserChangeEmailRead']
+    denormalization_context:
+      groups: ['UserChangeEmailWrite']
+  collectionOperations: []
+  itemOperations:
+    change_email:
+      method: POST
+      path: '/users/{id}/change-email'
+      controller: App\Application\Action\ChangeUserEmailAction
+      access_control: "is_granted('ROLE_ADMIN') or (user and object.isGranted(user))"
+
 App\Application\Document\UserChangePasswordDocument:
   shortName: User
   attributes:
