--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,6 +15,7 @@ framework:
              # Reviews
              'App\Application\Command\CreateReviewCommand': commands
              'App\Domain\Review\Event\ReviewCreated': events
+             'App\Domain\Review\Event\ReviewNeedsCheck': events
 
         default_bus: messenger.bus.commands
         buses:
