feat(checks): Create PHPStan and PHP-CS-Fixer checks

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "api-platform/api-pack": "^1.1",
         "beberlei/assert": "^3.2",
         "k911/swoole-bundle": "^0.4.2",
@@ -22,6 +23,7 @@
         "symfony/messenger": "4.2.*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/process": "4.2.*",
         "symfony/security-bundle": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
