--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -26,6 +26,9 @@ framework:
             messenger.bus.commands:
                 middleware:
                     - validation
+            messenger.bus.queries:
+                middleware:
+                    - validation
             messenger.bus.events:
                 default_middleware: allow_no_handlers
                 middleware:
