--- a/config/packages/api_documentation.yaml
+++ b/config/packages/api_documentation.yaml
@@ -26,3 +26,9 @@ services:
         decorates: app.domain.review_event.search_filter
         arguments:
             $decorated: '@app.swagger.review_event.search_filter.inner'
+
+    app.swagger.review_comment.search_filter:
+        class: App\Infrastructure\Documentation\SwaggerSearchFilter
+        decorates: app.domain.review_comment.search_filter
+        arguments:
+            $decorated: '@app.swagger.review_comment.search_filter.inner'
