--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -12,7 +12,7 @@ framework:
 
         # Redis
         app: cache.adapter.redis
-        system: cache.adapter.redis
+#        system: cache.adapter.redis
         default_redis_provider: '%env(REDIS_URI)%'
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
