feat(review): Add enabledChecks

--- a/config/packages/serialization/review.yaml
+++ b/config/packages/serialization/review.yaml
@@ -9,6 +9,9 @@ App\Domain\Review\Review:
     currentCommitHash:
       groups:
         - ReviewRead
+    enabledChecks:
+      groups:
+        - ReviewRead
     automatedChecks:
       groups:
         - ReviewRead
